JavaScriptをクラスなしで実装

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>クラスとインスタンス</title>
   </head>
   <body>
-    <div class="accordion">
+    <div class="accordion" id="js-accordion">
       <a href="" class="accordion-trigger"> Q1.JavaScriptとは何ですか？ </a>
       <div class="accordion-contents">
         A1.JavaScriptは、ウェブページに対してインタラクティブな要素を追加するために使用されるプログラミング言語です。主にクライアントサイドで動作し、ウェブブラウザ上で実行されます。
@@ -20,5 +20,6 @@
         A2.はい、JavaScriptではvar、let、constの3つのキーワードを使用して変数を宣言します。varは古い方法であり、ブロックスコープを持ちません。letとconstはES6で導入され、ブロックスコープを持ちます。letは再代入可能な変数を宣言するために使用され、constは再代入不可能な定数を宣言するために使用されます。
       </div>
     </div>
+    <script src="./accordion.js"></script>
   </body>
 </html>
