--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>クラスとインスタンス</title>
   </head>
   <body>
-    <div class="accordion" id="js-accordion">
-      <a href="" class="accordion-trigger"> Q1.JavaScriptとは何ですか？ </a>
+    <div class="accordion" id="js-faq">
+      <p class="accordion-trigger">Q1.JavaScriptとは何ですか？</p>
       <div class="accordion-contents">
         A1.JavaScriptは、ウェブページに対してインタラクティブな要素を追加するために使用されるプログラミング言語です。主にクライアントサイドで動作し、ウェブブラウザ上で実行されます。
       </div>
-      <a href="" class="accordion-trigger">
+      <p class="accordion-trigger">
         Q2.JavaScriptで変数を宣言する方法はありますか？
-      </a>
+      </p>
       <div class="accordion-contents">
         A2.はい、JavaScriptではvar、let、constの3つのキーワードを使用して変数を宣言します。varは古い方法であり、ブロックスコープを持ちません。letとconstはES6で導入され、ブロックスコープを持ちます。letは再代入可能な変数を宣言するために使用され、constは再代入不可能な定数を宣言するために使用されます。
       </div>
